# open-crafter-engine

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/discord/: commands.rs  mod.rs
src/openai/: handlers.rs  middleware.rs  mod.rs  models.rs  server.rs
src/settings/: mod.rs
src/utils/: mod.rs  model_validator.rs  skill_tool_manager.rs  system.rs
src/web/: api.rs  mod.rs  models.rs
