[package]
name = "open-crafter-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12"
nvml-wrapper = "0.10"
sysinfo = "0.34"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
