[package]
name = "open-crafter-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.10"
sysinfo = "0.34"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
dirs = "6"
futures = "0.3"
ipnet = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
